--- a/src/movies/views/serie.html
+++ b/src/movies/views/serie.html
@@ -25,10 +25,10 @@
 
                 <br/><br/><br/><br/>
 
-                <div class="user">
-                    <img class="user-img" src="images/placeholder.png"/>
-                    <div class="user-name">{{user}}</div>
-                </div>
+                             <div class="user">
+                        <div ng-if="user!= ''" class="user-name">
+                        <img class="user-img" src="images/placeholder.png"/>{{user.name}}</div>
+                        <div ng-if="user == ''" class="user-name"><a href="#/login">Sign in / Log in</a></div>
 
             
             </nav>      
